[gd_scene load_steps=3 format=3 uid="uid://nlie1bwq3alj"]

[ext_resource type="Script" uid="uid://dwl43xphi1tcp" path="res://scripts/Room.gd" id="1_llheb"]
[ext_resource type="Script" uid="uid://conen50hknd1p" path="res://scripts/RoomSpawner.gd" id="2_liqgt"]

[node name="Room" type="Node2D"]
script = ExtResource("1_llheb")

[node name="ResourceContainer" type="Node2D" parent="."]

[node name="EnemyContainer" type="Node2D" parent="."]

[node name="DebugLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="LayoutContainer" type="Node2D" parent="."]

[node name="ExitContainer" type="Node2D" parent="."]

[node name="RoomSpawner" type="Node" parent="."]
script = ExtResource("2_liqgt")
